[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-wavelet-transforms"
version = "0.1.0"
description = "Quantum circuit implementations of wavelet transforms"
authors = [
    { name = "Deepak Gupta" }
]
dependencies = [
    "pennylane>=0.30"
]

[tool.setuptools]
packages = ["quantum_wavelets"]
